# PlantillaPrimerProyecto

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  SFMLOrthogonalLayer.hpp  main.cpp
.github/workflows/: LintAndBuild.yml
assets/mapas/: asdf.tmx  mapa.tmx
